--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,13 +73,21 @@
                 android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:text="Predict"/>
+                android:text="Predict"
+                android:visibility="gone"/>
         </LinearLayout>
+
 
         <TextView
             android:id="@+id/tvResult"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="150dp"
+            android:scrollbars = "vertical"
+            />
+        <TextView
+            android:id="@+id/tvResultLink"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:scrollbars = "vertical"
             />
     </LinearLayout>
